--- a/wp-content/themes/granate/style.css
+++ b/wp-content/themes/granate/style.css
@@ -147,3 +147,39 @@ body {
       background-color: #fff;
     }
 }
+
+.child-post {
+  line-height: 80px;
+  margin-bottom: 20px;
+}
+
+.child-post .image {
+  height: 83px;
+  background-color: #e9e9e9;
+  width: 134px;
+  border-width: 4px;
+  border-style: solid;
+  border-color: #58c848;
+  text-align: center;
+  display: inline-block;
+  float: left;
+  margin-right: 15px;
+  position: relative;
+}
+
+.child-post .image:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-style: solid;
+    border-color: #fff;
+    box-sizing: border-box;
+    border-width: 2px;
+}
+
+.child-post .image img {
+    height: inherit;
+    padding: 13px;
+}
